--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "mysql": "^2.18.1"
   }
 }
